# src/routes/todo.js
@@ -106,46 +106,13 @@ module.exports = (db,amqpService) => {
   
  
 
-  /**
-   * @openapi
-   * /todo:
-   *  get:
-   *    tags:
-   *    - Todo
-   *    description: Get all todos by current user_id
-   *    responses:
-   *      200:
-   *        description: OK
-   *        content:
-   *          application/json:
-   *            schema:
-   *              type: array
-   *              items:
-   *                $ref: '#/components/schemas/Todo'
-   *      400:
-   *        description: "this person has no list of todos"
-   *        content:
-   *          application/json:
-   *            schema:
-   *              type: array
-   *              items:
-   *                $ref: '#/components/schemas/Error'
-   *    security:
-   *      - bearerAuth:
-   *          type: http
-   *          scheme: bearer
-   *          bearerFormat: JWT 
-   *         
-   */
-
-
   router.get('/', async (req, res, next) => {
     const uid = req.uid
     const todos = await db.findTodoByTodoidUserId(uid)
     if (todos){
-      console.log(uid)
-      console.log('===============')
-      console.log('===============')
+      // console.log(uid)
+      // console.log('===============')
+      // console.log('===============')
       res.status(200).json(todos)
       // res.send(peopleInTodos)
     }else{
@@ -154,54 +121,6 @@ module.exports = (db,amqpService) => {
   }
   )
 
-
-  /**
-   * @openapi
-   * /todo/:todo_id:
-   *  get:
-   *    tags:
-   *    - Todo
-   *    description: get a todolist based on the specified todo_id
-   *                  user has to be creator role or collaborator role
-   *    parameters:
-   *      - in: path
-   *        name: todo_id
-   *        schema:
-   *          type: integer
-   *        required: true
-   *    responses:
-   *      200:
-   *        description: OK
-   *        content:
-   *          application/json:
-   *            schema:
-   *              type: array
-   *              items:
-   *                $ref: '#/components/schemas/Todo'
-   *      400:
-   *        description: "Enter Valid id Number or List of todos not found"
-   *        content:
-   *          application/json:
-   *            schema:
-   *              type: array
-   *              items:
-   *                $ref: '#/components/schemas/Error'
-   *      403:
-   *        description: "Neither Creator nor collaborator"
-   *        content:
-   *          application/json:
-   *            schema:
-   *              type: array
-   *              items:
-   *                $ref: '#/components/schemas/Error'
-  
-   *    security:
-   *      - bearerAuth:
-   *          type: http
-   *          scheme: bearer
-   *          bearerFormat: JWT 
-   *         
-   */
 
 
 
@@ -227,55 +146,6 @@ module.exports = (db,amqpService) => {
 
 
 
-  /**
-   * @openapi
-   * /todo/:todo_id:
-   *  put:
-   *    tags:
-   *    - Todo
-   *    description: update a todolist based on the specified todo_id
-   *                  user has to be creator role or collaborator role
-   *    parameters:
-   *      - in: path
-   *        name: todo_id
-   *        schema:
-   *          type: integer
-   *        required: true
-   *    responses:
-   *      200:
-   *        description: OK
-   *        content:
-   *          application/json:
-   *            schema:
-   *              type: array
-   *              items:
-   *                $ref: '#/components/schemas/Todo'
-   *      400:
-   *        description: "Enter Valid id Number or List of todos not found"
-   *        content:
-   *          application/json:
-   *            schema:
-   *              type: array
-   *              items:
-   *                $ref: '#/components/schemas/Error'
-   *      403:
-   *        description: "Neither Creator nor collaborator"
-   *        content:
-   *          application/json:
-   *            schema:
-   *              type: array
-   *              items:
-   *                $ref: '#/components/schemas/Error'
-   *    security:
-   *      - bearerAuth:
-   *          type: http
-   *          scheme: bearer
-   *          bearerFormat: JWT 
-   * 
-   *         
-   */
-
-
 
   router.put('/:todo_id', async (req, res, next) => {
     const uid = req.uid
@@ -294,9 +164,9 @@ module.exports = (db,amqpService) => {
       if (role === null || role==='read-only'){
         res.status(403).json({error:`you are neither creator or collaboratro of todo list of id ${todo_id}`})
       } else {
-        const { title,updated_by,updated_on } = req.body
+        const { title,updated_by,updated_on,soft_delete } = req.body
         console.log(title, updated_by,updated_on)
-        const updatedTodo = new Todo({ todo_id:todo_id,uid:uid, title,updated_by,updated_on })
+        const updatedTodo = new Todo({ todo_id:todo_id,uid:uid, title,updated_by,updated_on,soft_delete})
         const todo = await db.updateTodo(todo_id, updatedTodo)
         res.status(200).json(todo)
       }
@@ -305,54 +175,7 @@ module.exports = (db,amqpService) => {
   })
 
   
-  /**
-   * @openapi
-   * /todos/:todo_id:
-   *  delete:
-   *    tags:
-   *    - Todo
-   *    description:  SOFT delete a todolist based on the specified todo_id
-   *                  user has to be creator role or collaborator role
-   *    parameters:
-   *      - in: path
-   *        name: todo_id
-   *        schema:
-   *          type: integer
-   *        required: true
-   *    responses:
-   *      200:
-   *        description: OK
-   *        content:
-   *          application/json:
-   *            schema:
-   *              $ref: '#/components/schemas/Todo'
-   *      403:
-   *        description: Neither Creator or Collaborator
-   *        content:
-   *          application/json:
-   *            schema:
-   *              $ref: '#/components/schemas/Error'
-   *      400:
-   *        description: "Enter Valid id Number or List of todos not found"
-   *        content:
-   *          application/json:
-   *            schema:
-   *              type: array
-   *              items:
-   *                $ref: '#/components/schemas/Error'
-   * 
-   *      404:
-   *        description: todo_id of  list not found
-   *        content:
-   *          application/json:
-   *            schema:
-   *              $ref: '#/components/schemas/Error'
-   *    security:
-   *      - bearerAuth:
-   *          type: http
-   *          scheme: bearer
-   *          bearerFormat: JWT 
-   */
+
 
   router.delete('/:todo_id', async (req, res, next) => {
     const uid = req.uid
@@ -389,55 +212,6 @@ module.exports = (db,amqpService) => {
     
   })
 
-    /**
-   * @openapi
-   * /todos/share/:todo_id:
-   *  post:
-   *    tags:
-   *    - Todo
-   *    description:  Share todo list to another user
-   *    parameters:
-   *      - in: path
-   *        name: todo_id
-   *        schema:
-   *          type: integer
-   *        required: true
-   *    responses:
-   *      200:
-   *        description: OK
-   *        content:
-   *          application/json:
-   *            schema:
-   *              $ref: '#/components/schemas/Todo'
-   *      403:
-   *        description: Neither Creator or Collaborator
-   *        content:
-   *          application/json:
-   *            schema:
-   *              $ref: '#/components/schemas/Error'
-   *      400:
-   *        description: "Enter Valid id Number or List of todos not found"
-   *        content:
-   *          application/json:
-   *            schema:
-   *              type: array
-   *              items:
-   *                $ref: '#/components/schemas/Error'
-   * 
-   *      404:
-   *        description: todo_id of  list not found
-   *        content:
-   *          application/json:
-   *            schema:
-   *              $ref: '#/components/schemas/Error'
-   * 
-   *    security:
-   *      - bearerAuth:
-   *          type: http
-   *          scheme: bearer
-   *          bearerFormat: JWT 
-   */
-  
 
 
   router.post('/share/:todo_id', async (req, res) => {
@@ -464,7 +238,7 @@ module.exports = (db,amqpService) => {
         console.log('===============')
         console.log(message)
         await amqpService.publishAppendUser(message)
-        res.status(202).json({status:'Message Published Success'})
+        res.status(202).json({status:'Share Request Sent'})
       }
     }
     
